# 2026-SegDigital-Sisteminha

./: .gitignore  README.md  pyproject.toml
src/sisteminha/: cli.py
src/sisteminha/senhas/: main.py
src/sisteminha/usuarios/: main.py
