[project]
name = "sisteminha"
version = "0.1.0"
description = "SedDigital Sisteminha CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
sisteminha = "sisteminha.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sisteminha"]
