[project]
name = "sisteminha"
version = "1.0.0"
description = "SedDigital Sisteminha CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "werkzeug>=3.1.6",
    "arrow>=1.3",
    "tabulate>=0.9.0",
]

[project.scripts]
sisteminha = "sisteminha.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sisteminha"]
